# finngen

./: .pre-commit-config.yaml  .tool-versions  README.md  parse_data.py  pyproject.toml  tox.ini
.github/workflows/: lint_and_test.yaml  publish-to-test-pypi.yaml
data/avoindata/: last_names.csv  men_first_names.csv  men_middle_names.csv  women_first_names.csv  women_middle_names.csv
data/source/avoindata/: LICENSE
data/source/statfin/: 11re -- Väestö iän (1-v.) ja sukupuolen mukaan alueittain, 1972-2021 - 2020.csv  LICENSE
finngen/: __init__.py  _storage.py  _utils.py  constants.py
finngen/data/: LICENSE  last_names.csv  last_names.ftr  location_age_gender.ftr  location_age_gender_distr.ftr  men_first_names.csv  men_first_names.ftr  men_middle_names.csv  men_middle_names.ftr  women_first_names.csv  women_first_names.ftr  women_middle_names.csv  women_middle_names.ftr
scripts/: avoindata.py  misc.py  parse_avoindata.py  parse_statfin.py  query_statfin.py
scripts/querys/: location_age_gender_distr.json
tests/: test__storage.py  test_finngen.py  test_proportions.py
