[tool.poetry]
name = "finngen"
version = "0.1.0"
description = ""
authors = ["Aleksi Mäkinen <aleksimatias.makinen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pandas = "^1.4.3"
pyarrow = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.20.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.6.0"
pyproject-flake8 = "^0.0.1-alpha.4"
openpyxl = "^3.0.10"
mypy = "^0.961"
pandas-stubs = "^1.4.3"
requests = "^2.28.1"
types-requests = "^2.28.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100