[tool.poetry]
name = "finngen"
version = "0.1.0"
description = ""
authors = ["Aleksi Mäkinen <aleksimatias.makinen@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12.3"
pandas = "^2.2.0"
pyarrow = "^15.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pre-commit = "^2.20.0"
ruff = "^0.3.1"
openpyxl = "^3.0.10"
mypy = "^0.990"
pandas-stubs = "^2.2.0"
requests = "^2.28.1"
types-requests = "^2.28.2"
freezegun = "^1.2.1"
types-freezegun = "^1.1.10"
tox = "^4.14.1"
importlib-resources = "^5.9.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = py3{9,10,11,12}

[testenv]
skip_install = true
allowlist_externals = poetry
deps =
    pytest
commands_pre =
    poetry install
commands =
    poetry run pytest tests/ --import-mode importlib
"""
