[tool.poetry]
name = "finngen"
version = "0.1.1a1"
description = "Generate more statistically believable instances of finnish people's personal data"
authors = ["Aleksi Mäkinen <aleksimatias.makinen@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Mknea/finngen"
keywords = ["finnish", "data", "generator", "faker", "finngen"]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.2.0"
pyarrow = "^15.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pre-commit = "^2.20.0"
ruff = "^0.3.1"
openpyxl = "^3.0.10"
mypy = "^0.990"
pandas-stubs = "^2.2.0"
requests = "^2.28.1"
types-requests = "^2.28.2"
freezegun = "^1.2.1"
types-freezegun = "^1.1.10"
tox = "^4.14.1"
importlib-resources = "^5.9.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "I",
    "B",
    "C",
    "E",
    "F",
    "W",
    "TID25",
    "T100",
    "RUF",
    "TRY004",
    "B904",
    "TRY302",
    "TRY400",
    "DTZ",
]

ignore = [
    "E402",
    "E501", # For the ruff formatter, if it has failed to format the line, do not complain
]
exclude = [".git", "__pycache__", "venv", ".venv", ".tox"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = py3{9,10,11,12}

[testenv]
skip_install = true
allowlist_externals = poetry
deps =
    pytest
commands_pre =
    poetry install
commands =
    poetry run pytest tests/ --import-mode importlib
"""
